# build/swagger.json
@@ -7,6 +7,118 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"ReviewDto": {
+				"properties": {
+					"_id": {
+						"type": "string"
+					},
+					"text": {
+						"type": "string"
+					},
+					"rating": {
+						"type": "number",
+						"format": "double"
+					},
+					"productId": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"_id",
+					"text",
+					"rating",
+					"productId",
+					"createdAt",
+					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ReviewListResponse": {
+				"properties": {
+					"reviews": {
+						"items": {
+							"$ref": "#/components/schemas/ReviewDto"
+						},
+						"type": "array"
+					},
+					"totalPages": {
+						"type": "number",
+						"format": "double"
+					},
+					"currentPage": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"reviews",
+					"totalPages",
+					"currentPage"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Error": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					},
+					"stack": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ReviewQueryParams": {
+				"properties": {
+					"page": {
+						"type": "string"
+					},
+					"limit": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ReviewCreationParams": {
+				"properties": {
+					"text": {
+						"type": "string"
+					},
+					"rating": {
+						"type": "number",
+						"format": "double"
+					},
+					"productId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"text",
+					"rating",
+					"productId"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"ProductDto": {
 				"properties": {
 					"_id": {
@@ -71,25 +183,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Error": {
-				"properties": {
-					"name": {
-						"type": "string"
-					},
-					"message": {
-						"type": "string"
-					},
-					"stack": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"name",
-					"message"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"ProductQueryParams": {
 				"properties": {
 					"page": {
@@ -97,6 +190,16 @@
 					},
 					"limit": {
 						"type": "string"
+					},
+					"category": {
+						"type": "string"
+					},
+					"price": {
+						"type": "string",
+						"enum": [
+							"highest",
+							"lowest"
+						]
 					}
 				},
 				"type": "object",
@@ -126,78 +229,6 @@
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"ReviewDto": {
-				"properties": {
-					"_id": {
-						"type": "string"
-					},
-					"text": {
-						"type": "string"
-					},
-					"rating": {
-						"type": "number",
-						"format": "double"
-					},
-					"productId": {
-						"type": "string"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
-					}
-				},
-				"required": [
-					"_id",
-					"text",
-					"rating",
-					"productId",
-					"createdAt",
-					"updatedAt"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ReviewListResponse": {
-				"properties": {
-					"reviews": {
-						"items": {
-							"$ref": "#/components/schemas/ReviewDto"
-						},
-						"type": "array"
-					},
-					"totalPages": {
-						"type": "number",
-						"format": "double"
-					},
-					"currentPage": {
-						"type": "number",
-						"format": "double"
-					}
-				},
-				"required": [
-					"reviews",
-					"totalPages",
-					"currentPage"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ReviewQueryParams": {
-				"properties": {
-					"page": {
-						"type": "string"
-					},
-					"limit": {
-						"type": "string"
-					}
-				},
-				"type": "object",
-				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -212,6 +243,104 @@
 		"contact": {}
 	},
 	"paths": {
+		"/reviews/{productId}": {
+			"get": {
+				"operationId": "GetProductReviews",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/ReviewListResponse"
+										},
+										{
+											"$ref": "#/components/schemas/Error"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"description": "Retrieves a an array of reviews for a specific product Id.\nOptional URL query params page and limit.\nIf no page or limit given, only first 10 results returned.",
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "productId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "page",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/reviews": {
+			"post": {
+				"operationId": "PostProduct",
+				"responses": {
+					"201": {
+						"description": "Created"
+					}
+				},
+				"description": "Creates a review. Pass review information using request body.",
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ReviewCreationParams"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/reviews/{reviewId}": {
+			"delete": {
+				"operationId": "DeleteProduct",
+				"responses": {
+					"204": {
+						"description": "No Content"
+					}
+				},
+				"description": "Deletes a single review using review Id in URL path.",
+				"security": [],
+				"parameters": [
+					{
+						"description": "The unique review id.",
+						"in": "path",
+						"name": "reviewId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/products": {
 			"get": {
 				"operationId": "GetAllProducts",
@@ -251,6 +380,26 @@
 						"required": false,
 						"schema": {
 							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "category",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "price",
+						"required": false,
+						"schema": {
+							"type": "string",
+							"enum": [
+								"highest",
+								"lowest"
+							]
 						}
 					}
 				]
@@ -329,58 +478,6 @@
 						"in": "path",
 						"name": "productId",
 						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/products/{productId}/reviews": {
-			"get": {
-				"operationId": "GetProductReviews",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"anyOf": [
-										{
-											"$ref": "#/components/schemas/ReviewListResponse"
-										},
-										{
-											"$ref": "#/components/schemas/Error"
-										}
-									]
-								}
-							}
-						}
-					}
-				},
-				"description": "Retrieves a an array of reviews for a specific product Id.\nOptional URL query params page and limit.\nIf no page or limit given, only first 10 results returned.",
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "productId",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "page",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "limit",
-						"required": false,
 						"schema": {
 							"type": "string"
 						}
